# jpeg

./: CMakeLists.txt
data/: benchmark_img.bmp.csv  benchmark_img_bw.bmp.csv  benchmark_img_dither.bmp.csv  benchmark_img_grey.bmp.csv  benchmark_lena.png.csv
src/: bitreader.h  bitwriter.h  blocks.h  code.h  compress.h  dct.h  huffman.h  main.cpp  quant.h  sample.h  tables.h  ycbcr.h  zigzag.h
